# interview-pilot

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: main.py  pyproject.toml
backend/agents/: __init__.py  base_agent.py  evaluation_agent.py  master_agent.py  persona_agents.py  research_agent.py  resume_agent.py
backend/api/: interview.py  research.py  upload.py  voice_ws.py
backend/core/: auth.py  bedrock_client.py  config.py  database.py  s3_client.py  seed.py  state.py  transcribe_client.py
backend/migrations/: 001_create_tables.py
backend/tests/: test_bedrock.py  test_rds.py  test_s3.py  test_step1.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py  test_transcribe.py
backend/tools/: document_reader.py  llm_tools.py  registry.py  web_scrape.py  web_search.py
deploy/: interview-backend.service  interview-frontend.service  nginx.conf  setup.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatMessage.tsx  CoachingPanel.tsx  HintPanel.tsx  HistoryList.tsx  InterviewChat.tsx  PasswordGate.tsx  Report.tsx  ResearchProgress.tsx  SetupForm.tsx  VoiceRecorder.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts
